Bugfix for guide spacing

--- a/src/css/guide.scss
+++ b/src/css/guide.scss
@@ -74,7 +74,7 @@ $article-width: 1200px;
     & > article {
         width: 70vw;
         max-width: $article-width;
-        padding-top: 1.5em;
+        margin-top: .5em;
         margin-left: 30vw;
         padding: 1.5em 4vw 0 1.5em;
 
